# mdit-py-emoji

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  test.yml
mdit_py_emoji/: __init__.py  data.py  rule.py
